Added about and skills section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,92 @@
     <span></span>
   </div>
 </nav>
+section id="home" class="hero">
+
+  <div class="hero-container">
+
+    <!-- LEFT: Profile Image -->
+    <div class="hero-img">
+      <img src="SHIVAM.jpg" alt="Shivam Garg">
+    </div>
+
+    <!-- RIGHT: Text Content -->
+    <div class="hero-text">
+      <h1>Hi, I'm <span>Shivam Garg</span></h1>
+      <p>
+  <span class="typing"></span>
+</p>
+
+
+
+      <div class="buttons">
+        <a href="https://github.com/garg05shivam" target="_blank">GitHub</a>
+        <a href="resume.pdf" class="secondary" download>Resume</a>
+      </div>
+    </div>
+
+  </div>
+
+</section>
+<section id="home" class="hero">
+
+  <div class="hero-container">
+
+    <!-- LEFT: Profile Image -->
+    <div class="hero-img">
+      <img src="SHIVAM.jpg" alt="Shivam Garg">
+    </div>
+
+    <!-- RIGHT: Text Content -->
+    <div class="hero-text">
+      <h1>Hi, I'm <span>Shivam Garg</span></h1>
+      <p>
+  <span class="typing"></span>
+</p>
+
+
+
+      <div class="buttons">
+        <a href="https://github.com/garg05shivam" target="_blank">GitHub</a>
+        <a href="resume.pdf" class="secondary" download>Resume</a>
+      </div>
+    </div>
+
+  </div>
+
+</section>
+
+
+    <!-- About Section -->
+     <section id="about" class="about fade-in">
+
+
+
+  <section id="about" class="about">
+    <h2 class="section-title">About Me</h2>
+
+    <div class="about-content">
+      <p>
+        I am a <strong>B.Tech Computer Science Engineering</strong> student at
+        <strong>Lovely Professional University</strong>, passionate about
+        <strong>Data Structures & Algorithms</strong> and building efficient,
+        real-world solutions.
+      </p>
+
+      <p>
+        I enjoy solving problems in <strong>C++</strong>, exploring
+        <strong>Machine Learning</strong>, <strong>NLP</strong>, and working on
+        <strong>Full-Stack projects</strong> that combine logic with creativity.
+      </p>
+
+      <p>
+        My goal is to continuously improve my skills and secure a role in a
+        <strong>top product-based company</strong>, where I can learn, grow, and
+        contribute meaningfully.
+      </p>
+    </div>
+  </section>
+
 
   
 </body>
