Added contacts section

--- a/index.html
+++ b/index.html
@@ -268,6 +268,45 @@ section id="home" class="hero">
 
     </div>
   </section>
+  
+      <!-- Contact Section -->
+  <section id="contact" class="contact fade-in">
+
+    <h2 class="section-title">Contact Me</h2>
+
+    <p class="contact-text">
+      I’m open to opportunities, internships, and collaborations.  
+      Let’s connect!
+    </p>
+
+    <div class="contact-links">
+      <a href="mailto:garg05shivam@gmail.com">
+        <i class="fa-solid fa-envelope"></i>
+        Email
+      </a>
+
+      <a href="https://github.com/garg05shivam" target="_blank">
+        <i class="fa-brands fa-github"></i>
+        GitHub
+      </a>
+
+      <a href="https://www.linkedin.com/in/shivam-garg-098a58285" target="_blank">
+        <i class="fa-brands fa-linkedin"></i>
+        LinkedIn
+      </a>
+
+     <a href="resume.pdf" download class="resume-btn">
+  <i class="fa-solid fa-file-arrow-down"></i>
+  <span>Download Resume</span>
+</a>
+
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p>© 2025 Shivam Garg | Built with ❤️ using HTML, CSS & JS</p>
+  </footer>
 
 
   
