--- a/index.html
+++ b/index.html
@@ -308,6 +308,69 @@ section id="home" class="hero">
     <p>© 2025 Shivam Garg | Built with ❤️ using HTML, CSS & JS</p>
   </footer>
 
+  <script>
+  document.addEventListener("DOMContentLoaded", () => {
+
+    // Fade-in animation
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("show");
+        }
+      });
+    }, { threshold: 0.2 });
+
+    document.querySelectorAll(".fade-in").forEach(el => observer.observe(el));
+
+    // Hamburger menu
+    const hamburger = document.getElementById("hamburger");
+    const navLinks = document.getElementById("navLinks");
+
+    hamburger.addEventListener("click", () => {
+      navLinks.classList.toggle("show");
+    });
+
+  });
+</script>
+<script>
+  const roles = [
+    "CSE Student",
+    "DSA Enthusiast",
+    "AI & ML Explorer",
+    "Full Stack Learner"
+  ];
+
+  let index = 0;
+  let charIndex = 0;
+  let isDeleting = false;
+  const typingElement = document.querySelector(".typing");
+
+  function typeEffect() {
+    const current = roles[index];
+    
+    if (!isDeleting) {
+      typingElement.textContent = current.slice(0, charIndex++);
+    } else {
+      typingElement.textContent = current.slice(0, charIndex--);
+    }
+
+    if (charIndex === current.length + 1) {
+      isDeleting = true;
+      setTimeout(typeEffect, 1200);
+      return;
+    }
+
+    if (charIndex === 0 && isDeleting) {
+      isDeleting = false;
+      index = (index + 1) % roles.length;
+    }
+
+    setTimeout(typeEffect, isDeleting ? 60 : 100);
+  }
+
+  typeEffect();
+</script>
+
 
   
 </body>
